--- a/README
+++ b/README
@@ -6,5 +6,5 @@ and then run the python script.
 `python scripts/signal_detection_script.py`
 
 More information about the project can be found
-[here]{https://tmfrasca.herokuapp.com/projects/signal-detection}
+[here](https://tmfrasca.herokuapp.com/projects/signal-detection)
 
